refactor: simplifica lógica e elimina variáveis desnecessárias